Migrate to Marketing cloud.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy": "yarn build && gpea-npm-en-uploader"
+    "deploy": "yarn run build && node mc-deploy.js && yarn run build && node mc-deploy.js"
   },
   "dependencies": {
     "@tailwindcss/custom-forms": "^0.2.1",
@@ -15,11 +15,11 @@
     "flexboxgrid": "^6.3.1",
     "gpea-npm-en-uploader": "greenpeace/gpea-npm-en-uploader",
     "normalize.css": "^8.0.1",
-    "nprogress": "^0.2.0",
     "postcss": "^7.0.29",
     "postcss-import": "^12.0.1",
     "postcss-modules": "^2.0.0",
     "tailwindcss": "^1.4.5",
+    "vee-validate": "^3.3.7",
     "vue": "^2.6.11",
     "vue-scrollto": "^2.18.1",
     "vue2-transitions": "^0.3.0"
@@ -33,6 +33,7 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
+    "prerender-spa-plugin": "^3.4.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   }
