Added the email suggestion.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "core-js": "^3.6.4",
     "flexboxgrid": "^6.3.1",
     "gpea-npm-en-uploader": "greenpeace/gpea-npm-en-uploader",
+    "mailcheck": "^1.1.1",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "postcss": "^7.0.29",
     "postcss-import": "^12.0.1",
     "postcss-modules": "^2.0.0",
